[gd_scene load_steps=11 format=2]

[ext_resource path="res://resources/Fonts/Font14.tres" type="DynamicFont" id=1]
[ext_resource path="res://resources/Fonts/Font24.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/Lobby.gd" type="Script" id=3]
[ext_resource path="res://resources/Fonts/Font36.tres" type="DynamicFont" id=4]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.3 )

[sub_resource type="Theme" id=3]
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = null
Label/styles/normal = null

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.3 )

[sub_resource type="Theme" id=5]
default_font = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0.25 )

[node name="Lobby" type="MarginContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -382.0
margin_right = 512.0
margin_bottom = 386.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 1 )
custom_constants/margin_right = 24
custom_constants/margin_top = 24
custom_constants/margin_left = 24
custom_constants/margin_bottom = 24
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 24.0
margin_top = 24.0
margin_right = 1000.0
margin_bottom = 744.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="LeftPanel" type="PanelContainer" parent="HBoxContainer"]
margin_right = 486.0
margin_bottom = 720.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/LeftPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 479.0
margin_bottom = 713.0
custom_constants/separation = 12

[node name="PlayerList" type="MarginContainer" parent="HBoxContainer/LeftPanel/VBoxContainer"]
margin_right = 472.0
margin_bottom = 260.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/LeftPanel/VBoxContainer/PlayerList"]
margin_left = 12.0
margin_top = 12.0
margin_right = 460.0
margin_bottom = 248.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/LeftPanel/VBoxContainer/PlayerList/PanelContainer"]
margin_right = 448.0
margin_bottom = 236.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/LeftPanel/VBoxContainer/PlayerList/PanelContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 438.0
margin_bottom = 226.0
theme = SubResource( 3 )

[node name="Names" type="VBoxContainer" parent="HBoxContainer/LeftPanel/VBoxContainer/PlayerList/PanelContainer/MarginContainer/HBoxContainer"]
margin_right = 208.0
margin_bottom = 216.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="NameHeader" type="Label" parent="HBoxContainer/LeftPanel/VBoxContainer/PlayerList/PanelContainer/MarginContainer/HBoxContainer/Names"]
margin_right = 208.0
margin_bottom = 17.0
text = "Player Name"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/LeftPanel/VBoxContainer/PlayerList/PanelContainer/MarginContainer/HBoxContainer/Names"]
margin_top = 27.0
margin_right = 208.0
margin_bottom = 31.0

[node name="Players" type="VBoxContainer" parent="HBoxContainer/LeftPanel/VBoxContainer/PlayerList/PanelContainer/MarginContainer/HBoxContainer/Names"]
margin_top = 41.0
margin_right = 208.0
margin_bottom = 41.0

[node name="VSeparator" type="VSeparator" parent="HBoxContainer/LeftPanel/VBoxContainer/PlayerList/PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 212.0
margin_right = 216.0
margin_bottom = 216.0

[node name="Status" type="VBoxContainer" parent="HBoxContainer/LeftPanel/VBoxContainer/PlayerList/PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 220.0
margin_right = 428.0
margin_bottom = 216.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="StatusHeader" type="Label" parent="HBoxContainer/LeftPanel/VBoxContainer/PlayerList/PanelContainer/MarginContainer/HBoxContainer/Status"]
margin_right = 208.0
margin_bottom = 17.0
text = "Player Status"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/LeftPanel/VBoxContainer/PlayerList/PanelContainer/MarginContainer/HBoxContainer/Status"]
margin_top = 27.0
margin_right = 208.0
margin_bottom = 31.0

[node name="Players" type="VBoxContainer" parent="HBoxContainer/LeftPanel/VBoxContainer/PlayerList/PanelContainer/MarginContainer/HBoxContainer/Status"]
margin_top = 41.0
margin_right = 208.0
margin_bottom = 41.0

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/LeftPanel/VBoxContainer"]
margin_top = 272.0
margin_right = 472.0
margin_bottom = 276.0

[node name="GameSettings" type="MarginContainer" parent="HBoxContainer/LeftPanel/VBoxContainer"]
margin_top = 288.0
margin_right = 472.0
margin_bottom = 548.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12

[node name="PanelContainer2" type="PanelContainer" parent="HBoxContainer/LeftPanel/VBoxContainer/GameSettings"]
margin_left = 12.0
margin_top = 12.0
margin_right = 460.0
margin_bottom = 248.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/LeftPanel/VBoxContainer/GameSettings/PanelContainer2"]
margin_right = 448.0
margin_bottom = 236.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Label" type="Label" parent="HBoxContainer/LeftPanel/VBoxContainer/GameSettings/PanelContainer2/MarginContainer"]
margin_left = 10.0
margin_top = 109.0
margin_right = 438.0
margin_bottom = 126.0
text = "Game Info"
align = 1

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer/LeftPanel/VBoxContainer"]
margin_top = 560.0
margin_right = 472.0
margin_bottom = 564.0

[node name="LobbyControl" type="MarginContainer" parent="HBoxContainer/LeftPanel/VBoxContainer"]
margin_top = 576.0
margin_right = 472.0
margin_bottom = 706.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
theme = SubResource( 5 )
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12

[node name="Connecting" type="VBoxContainer" parent="HBoxContainer/LeftPanel/VBoxContainer/LobbyControl"]
margin_left = 12.0
margin_top = 12.0
margin_right = 460.0
margin_bottom = 118.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 12

[node name="LobbySearch" type="Button" parent="HBoxContainer/LeftPanel/VBoxContainer/LobbyControl/Connecting"]
margin_right = 448.0
margin_bottom = 47.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Find a lobby"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/LeftPanel/VBoxContainer/LobbyControl/Connecting"]
margin_top = 59.0
margin_right = 448.0
margin_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 12

[node name="Quit" type="Button" parent="HBoxContainer/LeftPanel/VBoxContainer/LobbyControl/Connecting/HBoxContainer"]
margin_right = 56.0
margin_bottom = 47.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Quit"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer/LeftPanel/VBoxContainer/LobbyControl/Connecting/HBoxContainer"]
margin_left = 68.0
margin_right = 72.0
margin_bottom = 47.0

[node name="Public" type="Button" parent="HBoxContainer/LeftPanel/VBoxContainer/LobbyControl/Connecting/HBoxContainer"]
margin_left = 84.0
margin_right = 252.0
margin_bottom = 47.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Host Public"

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer/LeftPanel/VBoxContainer/LobbyControl/Connecting/HBoxContainer"]
margin_left = 264.0
margin_right = 268.0
margin_bottom = 47.0

[node name="Friends" type="Button" parent="HBoxContainer/LeftPanel/VBoxContainer/LobbyControl/Connecting/HBoxContainer"]
margin_left = 280.0
margin_right = 448.0
margin_bottom = 47.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Host Friends"

[node name="Host" type="HBoxContainer" parent="HBoxContainer/LeftPanel/VBoxContainer/LobbyControl"]
visible = false
margin_left = 12.0
margin_top = 12.0
margin_right = 460.0
margin_bottom = 118.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 12

[node name="Disconnect" type="Button" parent="HBoxContainer/LeftPanel/VBoxContainer/LobbyControl/Host"]
margin_right = 133.0
margin_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Disconnect"

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer/LeftPanel/VBoxContainer/LobbyControl/Host"]
margin_left = 145.0
margin_right = 149.0
margin_bottom = 106.0

[node name="Ready" type="Button" parent="HBoxContainer/LeftPanel/VBoxContainer/LobbyControl/Host"]
margin_left = 161.0
margin_right = 290.0
margin_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
text = "Ready"

[node name="VSeparator3" type="VSeparator" parent="HBoxContainer/LeftPanel/VBoxContainer/LobbyControl/Host"]
margin_left = 302.0
margin_right = 306.0
margin_bottom = 106.0

[node name="Start" type="Button" parent="HBoxContainer/LeftPanel/VBoxContainer/LobbyControl/Host"]
margin_left = 318.0
margin_right = 448.0
margin_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "Start"

[node name="Peer" type="HBoxContainer" parent="HBoxContainer/LeftPanel/VBoxContainer/LobbyControl"]
visible = false
margin_left = 12.0
margin_top = 12.0
margin_right = 460.0
margin_bottom = 118.0
custom_constants/separation = 12

[node name="Leave" type="Button" parent="HBoxContainer/LeftPanel/VBoxContainer/LobbyControl/Peer"]
margin_right = 210.0
margin_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Leave"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer/LeftPanel/VBoxContainer/LobbyControl/Peer"]
margin_left = 222.0
margin_right = 226.0
margin_bottom = 106.0

[node name="Ready" type="Button" parent="HBoxContainer/LeftPanel/VBoxContainer/LobbyControl/Peer"]
margin_left = 238.0
margin_right = 448.0
margin_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
text = "Ready"

[node name="RightPanel" type="PanelContainer" parent="HBoxContainer"]
margin_left = 490.0
margin_right = 976.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ChatBox" type="MarginContainer" parent="HBoxContainer/RightPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 479.0
margin_bottom = 713.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/RightPanel/ChatBox"]
margin_left = 12.0
margin_top = 12.0
margin_right = 460.0
margin_bottom = 694.0
custom_constants/separation = 24

[node name="Chatlog" type="RichTextLabel" parent="HBoxContainer/RightPanel/ChatBox/VBoxContainer"]
margin_right = 448.0
margin_bottom = 631.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 6 )
bbcode_enabled = true
scroll_following = true
selection_enabled = true

[node name="Message" type="LineEdit" parent="HBoxContainer/RightPanel/ChatBox/VBoxContainer"]
margin_top = 655.0
margin_right = 448.0
margin_bottom = 682.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
clear_button_enabled = true
placeholder_text = "Enter message"

[node name="LobbyPanel" type="PopupPanel" parent="."]
margin_left = 24.0
margin_top = 24.0
margin_right = 1000.0
margin_bottom = 744.0

[node name="VBoxContainer" type="VBoxContainer" parent="LobbyPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LobbyPanel/VBoxContainer"]
margin_right = 976.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 4 )
text = "LOBBIES"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="LobbyPanel/VBoxContainer"]
margin_top = 47.0
margin_right = 976.0
margin_bottom = 681.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LobbyList" type="VBoxContainer" parent="LobbyPanel/VBoxContainer/ScrollContainer"]
margin_right = 976.0
margin_bottom = 634.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseLobbySearch" type="Button" parent="LobbyPanel/VBoxContainer"]
margin_top = 685.0
margin_right = 976.0
margin_bottom = 720.0
size_flags_horizontal = 9
size_flags_vertical = 8
custom_fonts/font = ExtResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="HBoxContainer/LeftPanel/VBoxContainer/LobbyControl/Connecting/LobbySearch" to="." method="_on_LobbySearch_pressed"]
[connection signal="pressed" from="HBoxContainer/LeftPanel/VBoxContainer/LobbyControl/Connecting/HBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="HBoxContainer/LeftPanel/VBoxContainer/LobbyControl/Connecting/HBoxContainer/Public" to="." method="_on_Public_pressed"]
[connection signal="pressed" from="HBoxContainer/LeftPanel/VBoxContainer/LobbyControl/Connecting/HBoxContainer/Friends" to="." method="_on_Friends_pressed"]
[connection signal="pressed" from="HBoxContainer/LeftPanel/VBoxContainer/LobbyControl/Host/Disconnect" to="." method="_leave_Lobby"]
[connection signal="pressed" from="HBoxContainer/LeftPanel/VBoxContainer/LobbyControl/Host/Ready" to="." method="_on_Ready_pressed"]
[connection signal="pressed" from="HBoxContainer/LeftPanel/VBoxContainer/LobbyControl/Host/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="HBoxContainer/LeftPanel/VBoxContainer/LobbyControl/Peer/Leave" to="." method="_leave_Lobby"]
[connection signal="pressed" from="HBoxContainer/LeftPanel/VBoxContainer/LobbyControl/Peer/Ready" to="." method="_on_Ready_pressed"]
[connection signal="text_entered" from="HBoxContainer/RightPanel/ChatBox/VBoxContainer/Message" to="." method="_on_Message_text_entered"]
[connection signal="pressed" from="LobbyPanel/VBoxContainer/CloseLobbySearch" to="." method="_on_CloseLobbySearch_pressed"]
